[package]
name = "phraxos"
version = "0.1.0"
authors = ["Dummyc0m <dummyc0m@types.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
derive_more = "0.99.3"
im = "14.2.0"
argh = "0.1.3"
rayon = "1.3"
unicode-xid = "0.2.0"
unicode-width = "0.1.7"
