[package]
name = "phraxos"
version = "0.1.0"
authors = ["Dummyc0m <dummyc0m@types.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
derive_more = "0.99.3"
argh = "0.1.3"
rayon = "1.3"
unicode-xid = "0.2.0"
unicode-width = "0.1.7"
im = "14.3.0"
# performance not a concern right now
# im_rc = "14.3.0"
# lalrpop-util = "0.18.1"
# regex = "1"

# [build-dependencies]
# lalrpop = { version = "0.18.1", features = ["lexer"] }
